# embedded-rust

./: ACTIVITY_HISTORY.md  Cargo.toml  README.md  SETUP_AND_BUILD_STEPS.md  bufferoverflow.md  build.rs  byte_literal.md  char.md  constants.md  memory_safety.md  staticvariable.md  variable_datatype.md
.cargo/: config.toml
src/: bufferoverflow.rs  byte_literal.rs  char_tutorial.rs  constants.rs  lib.rs  main.rs  memory_safety.rs  staticvariable.rs  variaabl_datatype.rs
